--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -25,6 +25,18 @@ pipeline {
         git branch: 'main', url: 'https://github.com/adkab99/jjtech-ci-cd-pipeline-project-k8s1.git'
       }
     }
+ stage('create eks cluster') {
+     steps {
+       script{
+         dir ('terraform/eks-cluster-ec2') {
+           sh 'terraform init -upgrade'
+           sh 'terraform fmt'
+           sh 'terraform validate'
+           sh 'terraform plan -out=tfplan'
+           stash includes: 'tfplan', name: 'terraform-plan'
+         }
+       }
+     }
 
     
      post {
